@@ -11,13 +11,28 @@ def test_event():
     assert payload['event'] == 'STATE_CHANGED'
     assert payload['source'] == 'WUI'
 
+    event = Event(const.Event.STATE_CHANGED, const.Source.WUI, timestamp=24)
+    assert event.timestamp == 24
+
+
+def test_data():
     event = Event(const.Event.STATE_CHANGED,
                   const.Source.WUI,
-                  timestamp=24,
-                  command_id=42,
                   data="data",
                   null=None)
-    assert event.timestamp == 24
+    payload = event.to_payload()
+    assert payload['data'] == {'data': 'data'}
+
+
+def test_kwargs():
+    event = Event(const.Event.STATE_CHANGED,
+                  const.Source.WUI,
+                  command_id=42,
+                  job_id=12,
+                  reason="Chuck Norris",
+                  state=const.State.FINISHED)
     payload = event.to_payload()
     assert payload['command_id'] == 42
-    assert payload['data'] == {'data': 'data'}
+    assert payload['job_id'] == 12
+    assert payload['reason'] == "Chuck Norris"
+    assert payload['state'] == "FINISHED"
