@@ -13,6 +13,7 @@ ChnageLog
     * add ironing to FDM metadata
     * introduce `File.size` as a settable property
     * added functions for save/load cache of data
+    * fix event data structure
 
 0.2.0 (2020-12-14)
 
